Add linking and update bridge

--- a/tg-bridge.pyplugin/config.yml
+++ b/tg-bridge.pyplugin/config.yml
@@ -1,4 +1,4 @@
-# TelegramBridge v0.0.2 (on PyPlugins https://github.com/pyplugins/pyplugins)
+# TelegramBridge v0.1.0 (on PyPlugins https://github.com/pyplugins/pyplugins)
 # Link: https://github.com/dmytrohoi/tg-bridge-pyplugin
 #
 # NOTE: Reload config after changing - /tg-bridge-config reload
@@ -6,28 +6,47 @@
 ## WARNING: Required fields
 # Telegram token (https://core.telegram.org/bots#6-botfather)
 TOKEN:
+
+## Bridge between Minecraft chat and Telegram group
 # Server chat Telegram ID (https://stackoverflow.com/questions/32423837/telegram-bot-how-to-get-a-group-chat-id)
-CHAT_ID:
+bridge:
+    # Bridge can be disabled but allow notifications (chat_id required)
+    enable: false
+    chat_id:
 
-## TEMPLATES NOTE:
-#   - available HTML tag  (https://core.telegram.org/bots/api#html-style)
-#   - encode <, > and & symbols to HTML entities - < with &lt;, > with &gt; and & with &amp;
-#   - use <br/> for newline (aka \n)
-#   - placeholders: {message_text} and {username} (WARNING: only for outcoming_msg_template and outcoming_msg_broadcast_template)
-#   - Minecraft formating is available for outcoming_msg_broadcast_template and incoming_msg_template (https://minecraft.gamepedia.com/Formatting_codes)
-outcoming_msg_template: '<b>MINECRAFT &lt;{username}&gt;</b>:<br/>{message_text}'
-outcoming_msg_broadcast_template: '[ §5Telegram Chat§r §5§l<<§r ] <{username}> {message_text}'
-incoming_msg_template: '[ §5Telegram Chat§r §5§l>>§r ] {message_text}'
+    ## TEMPLATES
+    #   - available HTML tag  (https://core.telegram.org/bots/api#html-style)
+    #   - encode <, > and & symbols to HTML entities - < with &lt;, > with &gt; and & with &amp;
+    #   - use <br/> for newline (aka \n)
+    #   - placeholders: {message_text} and {username} (WARNING: only for outcoming_msg_template and outcoming_msg_broadcast_template)
+    #   - Minecraft formating is available for outcoming_msg_broadcast_template and incoming_msg_template (https://minecraft.gamepedia.com/Formatting_codes)
+    outcoming_msg_template: '<b>MINECRAFT &lt;{username}&gt;</b>:<br/>{message_text}'
+    outcoming_msg_broadcast_template: '[ §5Telegram Chat§r §5§l<<§r ] <{username}> {message_text}'
+    incoming_msg_template: '[ §5Telegram Chat§r §5§l>>§r ] {message_text}'
 
+    ## Notifications
+    # The message will be sent to the Telegram chat when the Server starts or shuts down
+    # Placeholders:
+    #   {ip} - Server IP and Port
+    #   {motd} - Server MOTD
+    startup_notification:
+        enable: true
+        template: "Server {ip} started!"
+    shutdown_notification:
+        enable: true
+        template: "Server {ip} closed."
 
-## Notifications
-# The message will be sent to the Telegram chat when the Server starts or shuts down
-# Placeholders:
-#   {ip} - Server IP and Port
-#   {motd} - Server MOTD
-startup_notification:
-    enable: true
-    template: "Server {ip} started!"
-shutdown_notification:
-    enable: true
-    template: "Server {ip} closed."
+## LINKING
+# Please implement catching of the inline button in your Telegram Bot
+# Button callback_data format: tcp:link:{user_code}
+linking:
+    enable: false
+    ## Formatting
+    # - available HTML tag  (https://core.telegram.org/bots/api#html-style)
+    # - encode <, > and & symbols to HTML entities - < with &lt;, > with &gt; and & with &amp;
+    # - use <br/> for newline (aka \n)
+    # - placeholders: {username}
+    message_text_template: "Player with username <b>{username}</b> try to link Minecraft account to this Telegram account"
+    button_text: "Confirm"
+    # - please set userid as first parameter in code and separate by ":"
+    code_validation_regexp: \d+
