--- a/.github/workflows/zip-and-create-release-draft.yml
+++ b/.github/workflows/zip-and-create-release-draft.yml
@@ -27,10 +27,9 @@ jobs:
         run: zip -d ./${{ secrets.RESULT_NAME }}.zip ./${{ secrets.DIRECTORY_TO_ZIP }}/
 
       # Runs a set of commands using the runners shell
-      - if: ${{ secrets.RESULT_EXT }}
-        name: Rename file
-        run: mv ./${{ secrets.RESULT_NAME }}.zip ./${{ secrets.RESULT_NAME }}.${{ secrets.RESULT_EXT }}
-      
+      - name: Rename file
+        run: if [ -n "${{ secrets.RESULT_EXT }}"]; then mv ./${{ secrets.RESULT_NAME }}.zip ./${{ secrets.RESULT_NAME }}.${{ secrets.RESULT_EXT }}; fi;
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
